--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1459,7 +1459,7 @@ pre {
 .hs-error-msg {
   color: #cc0000 !important;
 }
-ul {
+.inputs-list {
   list-style-type: none;
 }
 .inputs-list {
@@ -1473,8 +1473,8 @@ ul {
   font-size: 0.813rem;
 }
 
-input[type='checkbox'],
-input[type='radio'] {
+.input input[type='checkbox'],
+.input input[type='radio'] {
   width: fit-content;
 
   margin-bottom: 0;
@@ -1533,6 +1533,13 @@ input[type='radio'] {
   display: flex;
   padding: 1rem 0;
 }
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .hs-loading-spinner {
   border-width: 0.5rem;
   border-style: solid;
@@ -1544,27 +1551,6 @@ input[type='radio'] {
   position: relative;
   -webkit-animation: spin 2s infinite;
   animation: spin 2s infinite;
-  &:before,
-  &:after {
-    content: '';
-    width: 0.5rem;
-    height: 0.5rem;
-    border-radius: 50%;
-    background: transparent;
-    position: absolute;
-    left: 0.125rem;
-  }
-  &:before {
-    top: 0.063rem;
-  }
-  &:after {
-    bottom: 0.063rem;
-  }
-  @keyframes spin {
-    100% {
-      transform: rotate(360deg);
-    }
-  }
 }
 
 @media (max-width: 1024px) {
@@ -1575,8 +1561,8 @@ input[type='radio'] {
     width: 250px;
   }
 
-  input[type='checkbox'],
-  input[type='radio'] {
+  .input input[type='checkbox'],
+  .input input[type='radio'] {
     width: fit-content;
 
     margin-bottom: 0;
