--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -467,6 +467,7 @@ body {
   list-style-type: none;
   padding: 1rem 0;
   border-top: 1px solid #505660;
+  margin: 0;
 }
 
 .footer-bottom-links > .footer__item {
